<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">太工客户端</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="retry_large_image"><u>加载失败，点击重试</u></string>
    <string name="biz_plugin_weather_search_city_hint">搜索全国城市(中文/拼音)</string>
    <string name="press_again_exit">再按一次退出程序</string>
    <string name="media_library_title">音乐壁纸</string>
    <string name="chiefmailbox">处长信箱</string>
    <string name="mastermailbox">院长信箱</string>
    <string name="account_login_primary_text">立即登录</string>
    <string name="account_login_second_text">知行合一  行胜于言</string>
    <string name="welecome">欢迎使用太工客户端！</string>
    <string name="account_my_list">我的订单</string>
    <string name="account_exit">点击退出</string>
    <string name="account_express_list">手机防盗</string>
    <string name="account_write_review">评价商品</string>
    <string name="account_waiting_review">待评价商品</string>
    <string name="account_my_address">管理地址</string>
    <string name="account_favorite">我的收藏</string>
    <string name="account_recharge">最新天气</string>
    <string name="account_order_edit_text">修改订单</string>
    <string name="account_michat_text">在线客服</string>
    <string name="account_repair_progress">检查更新</string>
    <string name="account_my_order_list">订单查询</string>
    <string name="account_wait_pay_list">小米手电</string>
    <string name="account_service_station">好友分享</string>
    <string name="account_after_sale_order">功能介绍</string>
    <string name="account_miphone_sales_record">帮助与反馈</string>
    <string name="account_policy_text">关于我们</string>
    <string name="title">更新时间： %1$s</string>
    <string name="update_time">%s</string>
    <string name="content">~◌---~◌ō◌~--~l◌ve--~◌ō◌~----◌~</string>
    <string name="tab_news">新闻</string>
    <string name="tab_edu">教务</string>
    <string name="tab_settings">设置</string>
    <string name="easy_query">便捷查询</string>
    <string name="select_semester_and_class">请选择学期和班级</string>
    <string name="can_not_find_result">找不到所查询的班级，请稍后再试，或者在设置中更新数据库</string>
    <string name="school_intro">学院简介</string>
    <string name="school_logo_intro">学院标识</string>
    <string name="school_xi">太原工业学院院系设置</string>
    <string name="lesson_table">课程课表</string>
    <string name="select_semester_and_subject">请选择学期和科目</string>
    <string name="code_error">解析错误，代码502</string>
    <string name="pd_tips">提示信息</string>
    <string name="pd_message_downloading">正在下载，请稍后...</string>
    <string name="network_error">网络不可用，无法打开</string>
    <string name="system_error">系统出错，错误码001</string>
    <string name="input_feedback">请输入反馈，我们将为您不断改进。本反馈将通过短信形式发送！</string>
    <string name="input_phone_num">输入你的手机号码</string>
    <string name="submit">提交</string>
    <string name="feedback">反馈</string>
    <string name="input_feedback_content">请输入反馈内容！</string>
    <string name="input_connect_method">请输入你的联系方式！</string>
    <string name="message_sent">信息发送成功</string>
    <string name="no_update">暂无更新</string>
    <string name="app_name_version">太工客户端_V1.2.1</string>
    <string name="shortcomment">此版本适用于Android 2.3 及以上固件，如在其他手机系统上使用本软件，对于出现的任何问题，开发组不承担任何责任。本软件是由太原工业学院校内爱好开发组自主开发，移动MM实验室协助辅导，非经授权开发并正式发布的其他任何由本软件衍生的软件均属非法，下载、安装、使用此类软件将可能导致不可预知的风险，由此产生的法律责任与纠纷一概与本开发组无关。</string>
    <string name="original_web">官方网站：</string>
    <string name="web_url">http://www.tit.edu.cn/</string>
    <string name="help_mail">客服邮箱：</string>
    <string name="email">1711869806@qq.com</string>
    <string name="menber">开发组成员：裴建梅</string>
    <string name="about">关于</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="reg_new">注册</string>
    <string name="captcha">图片验证码</string>
    <string name="account_hint_text">请输入你的帐号</string>
    <string name="login_title">登录教务系统</string>
    <string name="login_now">登录</string>
    <string name="input_error">输入有误，请重新输入</string>
    <string name="find_password_in_website">"请到官网找回你的密码"</string>
    <string name="create_account_in_website">"请到官网注册新账户"</string>
    <string name="recurit">校内招聘</string>
    

</resources>