<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffededed"
    android:orientation="vertical" >
    
    <include layout="@layout/base_title"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/rom_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5.0dip"
                android:text="@string/title"
                android:textColor="#ff737373" />

            <TextView
                android:id="@+id/romer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5.0dip"
                android:text="@string/update_time"
                android:textColor="#ff737373" />

            <TextView
                android:id="@+id/rom_abstruct"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5.0dip"
                android:text="@string/content"
                android:textColor="#ff737373"
                android:textSize="18.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rom_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.3"
                android:padding="5.0dip"
                android:textColor="#ff737373"
                android:textSize="14.0sp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>